Refactored HTML to make it readable

--- a/index.html
+++ b/index.html
@@ -7,27 +7,83 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="section1">
+    <div class="section-one">
       <div class="header">
-        <a href="#">Header</a>
-      </div>
-      <div class="links">
-        <ul>
+        <div class="left">
+          <div class="header-logo">Header</div>
+        </div>
+        <div class="right">
+         <ul class="links">
           <li><a href="#">header link one</a></li>
           <li><a href="#">header link two</a></li>
           <li><a href="#">header link three</a></li>
         </ul>
+        </div>
       </div>
       <div class="content">
         <div class="text">
-          <h1>This website is awesome</h1>
-          <p>This website has some subtext that goes here under the main title.It's a smaller font and the color is lower contrast.</p>
-        </div>
-        <div class="button">
+          <div class="title">
+           This site is awesome! 
+          </div>
+          <div class="sub-text">
+           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
+          </div>
           <button type="button">Sign up</button>
         </div>
         <div class="image">
           <img src="" alt="this is a placeholder for an image">
+        </div>
+      </div>
+    </div>
+    <div class="section-two">
+      <div class="sec2-title">Some Random Information</div>
+      <div class="card-container">
+        <div class="card">
+          <div class="card-subtext">
+           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-subtext">
+           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-subtext">
+           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-subtext">
+           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-subtext">
+           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-three"> 
+      <div class="sec3-text">
+      This is an inspiring quote, or testinomial from a customer. Maybe jsut filling up space Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
+      </div>
+    </div>
+
+    <div class="section-four">
+      <div class="footer">
+        <div class="footer-text">
+          <div class="footer-title">
+            It's time!
+          </div>
+          <div class="footer-subtext">
+           Contact me if you can! 
+          </div>
+        </div>
+        <div class="footer-button">
+         <button type="button">Sign Up</button> 
         </div>
       </div>
     </div>
