font sizes and colors addition

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="section-one">
+    <div class="sectionOne">
       <div class="header">
         <div class="left">
           <div class="header-logo">Header</div>
@@ -35,13 +35,12 @@
         </div>
       </div>
     </div>
-    <div class="section-two">
+    <div class="sectionTwo">
       <div class="sec2-title">Some Random Information</div>
       <div class="card-container">
         <div class="card">
           <div class="card-subtext">
-           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
-          </div>
+           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. </div>
         </div>
         <div class="card">
           <div class="card-subtext">
@@ -66,13 +65,13 @@
       </div>
     </div>
 
-    <div class="section-three"> 
+    <div class="sectionThree"> 
       <div class="sec3-text">
       This is an inspiring quote, or testinomial from a customer. Maybe jsut filling up space Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
       </div>
     </div>
 
-    <div class="section-four">
+    <div class="sectionFour">
       <div class="footer">
         <div class="footer-text">
           <div class="footer-title">
