Finished most of the styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Landing Page</title>
     <link href="style.css" rel="stylesheet">
   </head>
-  <body>
+  <div>
     <div class="sectionOne">
       <div class="header">
         <div class="left">
@@ -26,42 +26,37 @@
            This site is awesome! 
           </div>
           <div class="sub-text">
-           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
+           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
           </div>
-          <button type="button">Sign up</button>
+          <div class="content-btn">
+            <button type="button">Sign up</button>
+          </div>
         </div>
         <div class="image">
-          <img src="" alt="this is a placeholder for an image">
+          <img src="./unsplash.jpg" alt="this is a placeholder for an image">
         </div>
       </div>
     </div>
     <div class="sectionTwo">
       <div class="sec2-title">Some Random Information</div>
       <div class="card-container">
-        <div class="card">
-          <div class="card-subtext">
-           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. </div>
+        <div>
+          <div class="card"></div>
+          <div class="card-subtext">This is me cheking if the sub-text finally works!</div>
         </div>
-        <div class="card">
-          <div class="card-subtext">
-           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
-          </div>
+        <div>
+          <div class="card"></div>
+          <div class="card-subtext">This is me cheking if the sub-text finally works!</div>
         </div>
-        <div class="card">
-          <div class="card-subtext">
-           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
-          </div>
+        <div>
+          <div class="card"></div>
+          <div class="card-subtext">This is me cheking if the sub-text finally works!</div>
         </div>
-        <div class="card">
-          <div class="card-subtext">
-           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
-          </div>
+        <div>
+          <div class="card"></div>
+          <div class="card-subtext">This is me cheking if the sub-text finally works!</div>
         </div>
-        <div class="card">
-          <div class="card-subtext">
-           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
-          </div>
-        </div>
+      </div>
       </div>
     </div>
 
@@ -72,19 +67,20 @@
     </div>
 
     <div class="sectionFour">
-      <div class="footer">
-        <div class="footer-text">
-          <div class="footer-title">
-            It's time!
-          </div>
-          <div class="footer-subtext">
-           Contact me if you can! 
-          </div>
+      <div class="subsection">
+        <div class="sec4-text">
+          <div class="sec4-title">Call to actions! It's time!</div>
+          <div class="sec4-subtext">Sign up for our product by clicking that button right over there!</div>
         </div>
-        <div class="footer-button">
+        <div class="sec4-button">
          <button type="button">Sign Up</button> 
         </div>
       </div>
     </div>
-  </body>
+    <div class="footer">
+      <div class="footer-text">
+       Copyright@2024 
+      </div>
+    </div>
+</body>
 </html>
