Worked on some final touches! Will finish later

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
           <div class="header-logo">Header</div>
         </div>
         <div class="right">
-         <ul class="links">
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link two</a></li>
-          <li><a href="#">header link three</a></li>
-        </ul>
+          <ul class="links">
+            <li><a href="#">Header link one</a></li>
+            <li><a href="#">Header link two</a></li>
+            <li><a href="#">Header link three</a></li>
+          </ul>
         </div>
       </div>
       <div class="content">
         <div class="text">
           <div class="title">
-           This site is awesome! 
+            This website is awesome 
           </div>
           <div class="sub-text">
-           Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
+            Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat. 
           </div>
           <div class="content-btn">
-            <button type="button">Sign up</button>
+            <button class="btn" type="button">Sign up</button>
           </div>
         </div>
         <div class="image">
@@ -40,29 +40,29 @@
     <div class="sectionTwo">
       <div class="sec2-title">Some Random Information</div>
       <div class="card-container">
-        <div>
+        <div class="card-wrapper">
           <div class="card"></div>
           <div class="card-subtext">This is me cheking if the sub-text finally works!</div>
         </div>
-        <div>
+        <div class="card-wrapper">
           <div class="card"></div>
           <div class="card-subtext">This is me cheking if the sub-text finally works!</div>
         </div>
-        <div>
-          <div class="card"></div>
-          <div class="card-subtext">This is me cheking if the sub-text finally works!</div>
+          <div class="card-wrapper">
+            <div class="card"></div>
+            <div class="card-subtext">This is me cheking if the sub-text finally works!</div>
+          </div>
+          <div class="card-wrapper">
+            <div class="card"></div>
+            <div class="card-subtext">This is me cheking if the sub-text finally works!</div>
+          </div>
         </div>
-        <div>
-          <div class="card"></div>
-          <div class="card-subtext">This is me cheking if the sub-text finally works!</div>
-        </div>
-      </div>
       </div>
     </div>
 
     <div class="sectionThree"> 
       <div class="sec3-text">
-      This is an inspiring quote, or testinomial from a customer. Maybe jsut filling up space Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
+        This is an inspiring quote, or testinomial from a customer. Maybe jsut filling up space Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
       </div>
     </div>
 
@@ -73,14 +73,14 @@
           <div class="sec4-subtext">Sign up for our product by clicking that button right over there!</div>
         </div>
         <div class="sec4-button">
-         <button type="button">Sign Up</button> 
+          <button type="button">Sign Up</button> 
         </div>
       </div>
     </div>
     <div class="footer">
       <div class="footer-text">
-       Copyright@2024 
+        Copyright@2024 
       </div>
     </div>
-</body>
+    </body>
 </html>
